Setting up Front end with tailwind

--- a/packages/react-app/src/index.css
+++ b/packages/react-app/src/index.css
@@ -1,8 +1,4 @@
-body {
-  margin: 0;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+/* ./src/index.css */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
