--- a/packages/react-app/src/App.css
+++ b/packages/react-app/src/App.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css?family=Space+Mono:400,700|Libre+Franklin:400,600|Miriam+Libre:400");
+
 .App {
   text-align: center;
 }
