--- a/packages/react-app/src/components/Faq/Faq.css
+++ b/packages/react-app/src/components/Faq/Faq.css
@@ -11,7 +11,7 @@
 
 .faq-group-overlay {
 	align-items: flex-start;
-	background-color: rgba(24, 43, 36);
+	background-color: white;
 	display: flex;
 	flex-direction: column;
   }
@@ -25,12 +25,11 @@
   }
 
   .ant-collapse-content-box {
-	background-color: #337062;
-	color: white;
+	background-color: #DDF1E9;
   }
 
   .ant-collapse {
-	  background-color: rgba(24, 43, 36);
+	  background-color: white;
 	  border: 0;
   }
 
@@ -52,6 +51,7 @@
 
   .ant-collapse-header {
 	color: #6DC5A0;
+	background-color: white;
   }
 
   .ant-collapse-extra {
@@ -60,6 +60,7 @@
 
   .ant-collapse > .ant-collapse-item-active > .ant-collapse-header {
 	color: white !important;
+	background-color: #337062;
   }
 
   .ant-collapse > .ant-collapse-item-active > .ant-collapse-content > .ant-collapse-content-box > p > a {
